tests/fixtures/valid/real_world_smoke/06_tuple_bb.pine
//@version=6
indicator("BB")
[basis, upper, lower] = ta.bb(close, 20, 2)
plot(basis)
plot(upper)
plot(lower)
