tests/fixtures/invalid/semantic/history_offset_not_integer.pine
//@version=6
indicator("Bad")
x = close[1.5]
